--- a/app/src/main/res/layout/fragment_confirmlist.xml
+++ b/app/src/main/res/layout/fragment_confirmlist.xml
@@ -49,14 +49,15 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tl_plan_category">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_plan_list"
             android:layout_width="match_parent"
-            android:layout_height="0dp" />
+            android:layout_height="wrap_content" />
 
     </androidx.core.widget.NestedScrollView>
 
