--- a/app/src/main/res/layout/dialog_calendar.xml
+++ b/app/src/main/res/layout/dialog_calendar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4D000000"
@@ -9,7 +10,7 @@
     <FrameLayout
         android:id="@+id/fl_calendar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="469dp"
         android:background="@drawable/layout_calender_dialog"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,21 +18,20 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginVertical="1dp"
-                android:background="@color/grayWhite">
+                android:background="@color/grayWhite"
+                tools:ignore="MissingConstraints">
 
                 <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-                    android:id="@+id/view_canlendar"
+                    android:id="@+id/view_calendar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="24dp"
                     android:layout_marginTop="11dp"
-                    android:layout_marginBottom="21dp"
-                    android:paddingTop="6dp"
                     app:mcv_leftArrowMask="@drawable/chevron_left"
                     app:mcv_rightArrowMask="@drawable/chevron_right"
                     app:mcv_selectionColor="#00FFFFFF"
@@ -80,9 +80,9 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/Btn_select_date"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="44dp"
                 android:layout_marginHorizontal="24dp"
-                android:layout_marginBottom="46dp"
+                android:layout_marginBottom="45dp"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="0dp"
                 app:layout_constraintStart_toStartOf="parent"
