--- a/app/src/main/res/layout/dialog_calendar.xml
+++ b/app/src/main/res/layout/dialog_calendar.xml
@@ -27,7 +27,7 @@
                 tools:ignore="MissingConstraints">
 
                 <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-                    android:id="@+id/view_calendar"
+                    android:id="@+id/mcv_Calendar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="24dp"
@@ -38,7 +38,7 @@
                     app:mcv_showOtherDates="none" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cl_select_date"
+                    android:id="@+id/cl_calendar_select_date"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
                     android:layout_marginHorizontal="120dp"
@@ -46,7 +46,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <FrameLayout
-                    android:id="@+id/fl_select_date"
+                    android:id="@+id/fl_calendar_select_date"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
@@ -63,22 +63,8 @@
                     app:layout_constraintTop_toTopOf="parent" />
             </FrameLayout>
 
-<!--            <Button-->
-<!--                android:id="@+id/Btn_select_date"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                android:background="@color/gray200"-->
-<!--                android:enabled="false"-->
-<!--                android:layout_marginBottom="20dp"-->
-<!--                android:layout_marginHorizontal="24dp"-->
-<!--                android:fontFamily="@font/pretendard_medium"-->
-<!--                android:textSize="16sp"-->
-<!--                android:textColor="@color/grayWhite"-->
-<!--                android:text="적용하기"/>-->
-
             <androidx.cardview.widget.CardView
-                android:id="@+id/Btn_select_date"
+                android:id="@+id/cv_calendar_select_btn"
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:layout_marginHorizontal="24dp"
