--- a/app/src/main/res/layout/fragment_terms_conditions.xml
+++ b/app/src/main/res/layout/fragment_terms_conditions.xml
@@ -7,7 +7,7 @@
 
 
     <TextView
-        android:id="@+id/name_text1_tv"
+        android:id="@+id/tv_terms_title1"
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:text="커넷 서비스 이용약관을"
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/terms_text2_tv"
+        android:id="@+id/tv_terms_title2"
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:text="확인해주세요"
@@ -28,27 +28,26 @@
         android:textColor="@color/black"
         android:textSize="26sp"
         android:layout_marginStart="24dp"
-        app:layout_constraintTop_toBottomOf="@id/name_text1_tv"
+        app:layout_constraintTop_toBottomOf="@id/tv_terms_title1"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <!--모두동의-->
     <androidx.cardview.widget.CardView
-        android:id="@+id/terms_check_all_cv"
+        android:id="@+id/cv_terms_check_all"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginBottom="33dp"
-        app:layout_constraintStart_toStartOf="@id/terms_check1_cv"
-        app:layout_constraintBottom_toTopOf="@id/terms_check1_cv"
+        app:layout_constraintStart_toStartOf="@id/cv_terms_personal_info"
+        app:layout_constraintBottom_toTopOf="@id/cv_terms_personal_info"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/terms_check_all_iv"
+                android:id="@+id/iv_terms_check_all"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/checkbox2"
@@ -57,13 +56,13 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/terms_check_all_tv"
+                android:id="@+id/tv_terms_check_all"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:text="모두 동의"
                 android:fontFamily="@font/pretendard_bold"
                 android:layout_marginStart="10dp"
-                app:layout_constraintStart_toEndOf="@id/terms_check_all_iv"
+                app:layout_constraintStart_toEndOf="@id/iv_terms_check_all"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -71,55 +70,56 @@
 
     </androidx.cardview.widget.CardView>
     <View
-        android:id="@+id/line"
+        android:id="@+id/v_terms_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginBottom="20dp"
         android:layout_marginHorizontal="24dp"
         android:background="@color/gray100"
-        app:layout_constraintStart_toStartOf="@id/terms_btn_cv"
-        app:layout_constraintEnd_toEndOf="@id/terms_btn_cv"
-        app:layout_constraintBottom_toTopOf="@id/terms_check1_cv"/>
+        app:layout_constraintStart_toStartOf="@id/cv_terms_next_btn"
+        app:layout_constraintEnd_toEndOf="@id/cv_terms_next_btn"
+        app:layout_constraintBottom_toTopOf="@id/cv_terms_personal_info"/>
 
     <!--!!!!보기 밑줄 구현하기!!!!-->
     <!--약관 선택1 부분-->
     <androidx.cardview.widget.CardView
-        android:id="@+id/terms_check1_cv"
+        android:id="@+id/cv_terms_personal_info"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintStart_toStartOf="@id/terms_check2_cv"
-        app:layout_constraintBottom_toTopOf="@id/terms_check2_cv"
+        app:layout_constraintStart_toStartOf="@id/cv_terms_of_use"
+        app:layout_constraintBottom_toTopOf="@id/cv_terms_of_use"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
             <ImageView
-                android:id="@+id/terms_check1_iv"
+                android:id="@+id/iv_terms_personal_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/checkbox2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
             <TextView
-                android:id="@+id/terms_check1_tv"
+                android:id="@+id/tv_terms_personal_info"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:text="[필수] 개인정보 수집 밎 이용 동의"
                 android:fontFamily="@font/pretendard_bold"
                 android:layout_marginStart="10dp"
-                app:layout_constraintStart_toEndOf="@id/terms_check1_iv"
+                app:layout_constraintStart_toEndOf="@id/iv_terms_personal_info"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
             <TextView
+                android:id="@+id/tv_terms_personal_info_link"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:text="보기"
                 android:fontFamily="@font/pretendard_regular"
                 android:layout_marginStart="10dp"
                 android:textColor="@color/purpleMain"
-                app:layout_constraintStart_toEndOf="@id/terms_check1_tv"
+                app:layout_constraintStart_toEndOf="@id/tv_terms_personal_info"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -127,85 +127,86 @@
 
     <!--약관 선택2 부분-->
     <androidx.cardview.widget.CardView
-        android:id="@+id/terms_check2_cv"
+        android:id="@+id/cv_terms_of_use"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintStart_toStartOf="@id/terms_check3_cv"
-        app:layout_constraintBottom_toTopOf="@id/terms_check3_cv"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintStart_toStartOf="@id/cv_terms_next_btn"
+        app:layout_constraintBottom_toTopOf="@id/cv_terms_next_btn"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
             <ImageView
-                android:id="@+id/terms_check2_iv"
+                android:id="@+id/iv_terms_of_use"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/checkbox2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
             <TextView
-                android:id="@+id/terms_check2_tv"
+                android:id="@+id/tv_terms_of_use"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:text="[필수] 이용약관 동의"
                 android:fontFamily="@font/pretendard_bold"
                 android:layout_marginStart="10dp"
-                app:layout_constraintStart_toEndOf="@id/terms_check2_iv"
+                app:layout_constraintStart_toEndOf="@id/iv_terms_of_use"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
             <TextView
+                android:id="@+id/tv_terms_of_use_link"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:text="보기"
                 android:fontFamily="@font/pretendard_regular"
                 android:layout_marginStart="10dp"
                 android:textColor="@color/purpleMain"
-                app:layout_constraintStart_toEndOf="@id/terms_check2_tv"
+                app:layout_constraintStart_toEndOf="@id/tv_terms_of_use"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <!--약관 선택3 부분-->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/terms_check3_cv"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:layout_marginBottom="52dp"
-        app:layout_constraintStart_toStartOf="@id/terms_btn_cv"
-        app:layout_constraintBottom_toTopOf="@id/terms_btn_cv"
-        app:cardBackgroundColor="@android:color/transparent"
-        app:cardElevation="0dp">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/terms_check3_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/checkbox2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="[선택] 푸시 알람 수신 동의"
-                android:fontFamily="@font/pretendard_bold"
-                android:layout_marginStart="10dp"
-                app:layout_constraintStart_toEndOf="@id/terms_check3_iv"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/terms_check3_cv"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="20dp"-->
+<!--        android:layout_marginBottom="52dp"-->
+<!--        app:layout_constraintStart_toStartOf="@id/cv_terms_next_btn"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/cv_terms_next_btn"-->
+<!--        app:cardBackgroundColor="@android:color/transparent"-->
+<!--        app:cardElevation="0dp">-->
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent">-->
+<!--            <ImageView-->
+<!--                android:id="@+id/terms_check3_iv"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/checkbox2"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent"/>-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="20dp"-->
+<!--                android:text="[선택] 푸시 알람 수신 동의"-->
+<!--                android:fontFamily="@font/pretendard_bold"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                app:layout_constraintStart_toEndOf="@id/terms_check3_iv"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"/>-->
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
 
-    </androidx.cardview.widget.CardView>
+<!--    </androidx.cardview.widget.CardView>-->
 
 
 
     <!--다음 버튼-->
     <androidx.cardview.widget.CardView
-        android:id="@+id/terms_btn_cv"
+        android:id="@+id/cv_terms_next_btn"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_marginHorizontal="24dp"
