--- a/app/src/main/res/layout/dialog_delete_plan.xml
+++ b/app/src/main/res/layout/dialog_delete_plan.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
-                android:id="@+id/tv_text"
+                android:id="@+id/tv_dialog_delete_text"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:text="약속을 삭제하시겠습니까?"
@@ -33,15 +33,15 @@
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <View
-                android:id="@+id/logout_v"
+                android:id="@+id/v_dialog_delete_1"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/gray100"
                 android:layout_marginTop="43dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_text"/>
+                app:layout_constraintTop_toBottomOf="@id/tv_dialog_delete_text"/>
 
             <TextView
-                android:id="@+id/tv_cancel"
+                android:id="@+id/tv_dialog_delete_btn_cancel"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:text="취소"
@@ -51,11 +51,11 @@
                 android:paddingVertical="18dp"
                 android:textAlignment="center"
                 app:layout_constraintWidth_percent="0.5"
-                app:layout_constraintTop_toBottomOf="@id/logout_v"
+                app:layout_constraintTop_toBottomOf="@id/v_dialog_delete_1"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
-                android:id="@+id/tv_delete"
+                android:id="@+id/tv_dialog_delete_btn_delete"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:text="삭제"
@@ -65,14 +65,14 @@
                 android:paddingVertical="18dp"
                 android:textAlignment="center"
                 app:layout_constraintWidth_percent="0.5"
-                app:layout_constraintTop_toBottomOf="@id/logout_v"
+                app:layout_constraintTop_toBottomOf="@id/v_dialog_delete_1"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
             <View
                 android:layout_width="1dp"
                 android:layout_height="24dp"
                 android:background="@color/gray100"
-                app:layout_constraintTop_toBottomOf="@id/logout_v"
+                app:layout_constraintTop_toBottomOf="@id/v_dialog_delete_1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
