--- a/app/src/main/res/layout/dialog_enroll_code.xml
+++ b/app/src/main/res/layout/dialog_enroll_code.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/layout_sidedialog"
     android:padding="18dp">
 
     <LinearLayout
@@ -26,7 +27,7 @@
         android:layout_marginTop="24dp"
         android:fontFamily="@font/pretendard_bold"
         android:gravity="start"
-        android:text="초대코드가\n발급되었어요."
+        android:text="@string/invitecode_issue"
         android:textColor="@color/texthigh"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@id/input_code_til"
@@ -62,7 +63,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/pretendard"
-        android:text="Xy3zE56j"
         android:textColor="@color/texthigh"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/input_code_til"
@@ -70,18 +70,33 @@
         app:layout_constraintStart_toStartOf="@id/input_code_til"
         app:layout_constraintTop_toTopOf="@id/input_code_til" />
 
-    <TextView
-        android:id="@+id/expiration_period_tv"
+
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
-        android:text="초대 코드 유효기간 : 2023.07.17.21:32"
-        android:textColor="@color/textMedium"
-        android:textSize="10sp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="@id/input_code_til"
-        app:layout_constraintTop_toBottomOf="@id/input_code_til" />
+        app:layout_constraintTop_toBottomOf="@id/input_code_til">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/pretendard"
+            android:text="@string/invitecode_expiration_period"
+            android:textColor="@color/textMedium"
+            android:textSize="10sp" />
+
+        <TextView
+            android:id="@+id/expiration_period_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/pretendard"
+            android:textColor="@color/textMedium"
+            android:textSize="10sp" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <Button
         android:id="@+id/enroll_btn"
@@ -89,6 +104,7 @@
         android:layout_height="54dp"
         android:layout_marginHorizontal="33dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/background_button_purple_10"
         android:backgroundTint="@color/purpleMain"
         android:enabled="false"
         android:fontFamily="@font/pretendard"
@@ -98,6 +114,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/input_code_til" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
