--- a/app/src/main/res/layout/dialog_group_enroll.xml
+++ b/app/src/main/res/layout/dialog_group_enroll.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="18dp">
+    android:padding="18dp"
+    android:background="@drawable/layout_sidedialog">
 
     <ImageView
         android:id="@+id/iv_dialog_group_enroll_close"
@@ -93,13 +94,12 @@
         android:layout_height="54dp"
         android:layout_marginHorizontal="33dp"
         android:layout_marginTop="32dp"
-        android:backgroundTint="@color/select_btn"
+        android:background="@drawable/selector_background_button"
         android:enabled="false"
         android:text="@string/group_enroll"
         android:textColor="@color/grayWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/til_dialog_group_enroll_input_code" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
