--- a/app/src/main/res/drawable/button_design_gray_50.xml
+++ b/app/src/main/res/drawable/button_design_gray_50.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="10dp"
-    android:shape="rectangle" >
+    android:shape="rectangle">
     <solid android:color="@color/gray50" />
-    <corners
-        android:bottomLeftRadius="2dp"
-        android:bottomRightRadius="2dp"
-        android:topLeftRadius="2dp"
-        android:topRightRadius="2dp" />
+    <corners android:radius="2dp" />
 </shape>
