--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,169 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <FrameLayout
-            android:id="@+id/fl_calendar"
+        android:layout_height="match_parent"
+        android:background="@color/grayWhite"
+        android:elevation="1dp">
+
+        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+            android:id="@+id/view_canlendar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent">
-<!--            app:layout_constraintBottom_toTopOf="@id/cl_promise_date"-->
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginBottom="21dp"
+            android:paddingTop="6dp"
+            app:mcv_leftArrowMask="@drawable/chevron_left"
+            app:mcv_rightArrowMask="@drawable/chevron_right"
+            app:mcv_selectionColor="#00FFFFFF"
+            app:mcv_showOtherDates="none" />
 
+        <View
+            android:id="@+id/cl_select_date"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:layout_marginHorizontal="120dp"
+            android:layout_marginTop="31dp" />
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginVertical="1dp"
-                android:background="@color/grayWhite"
-                android:elevation="1dp">
+        <FrameLayout
+            android:id="@+id/fl_select_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="36dp"
+            android:background="@drawable/layout_select_date_white"
+            android:elevation="4dp"
+            android:visibility="gone" />
 
-                <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-                    android:id="@+id/view_canlendar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="24dp"
-                    android:layout_marginTop="11dp"
-                    android:layout_marginBottom="21dp"
-                    android:paddingTop="6dp"
-                    app:mcv_leftArrowMask="@drawable/chevron_left"
-                    app:mcv_rightArrowMask="@drawable/chevron_right"
-                    app:mcv_selectionColor="#00FFFFFF"
-                    app:mcv_showOtherDates="none" />
+    </FrameLayout>
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cl_select_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:layout_marginHorizontal="120dp"
-                    android:layout_marginTop="31dp"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <FrameLayout
-                    android:id="@+id/fl_select_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginHorizontal="24dp"
-                    android:layout_marginTop="36dp"
-                    android:layout_marginBottom="126dp"
-                    android:background="@drawable/layout_select_date_white"
-                    android:elevation="4dp"
-                    android:paddingTop="32dp"
-                    android:paddingBottom="30dp"
-                    android:visibility="gone"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </FrameLayout>
-
-        </FrameLayout>
-<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--            android:id="@+id/cl_promise_date"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/fl_calendar"-->
-<!--            android:layout_marginHorizontal="15dp"-->
-<!--            android:layout_marginTop="36dp">-->
-<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                android:id="@+id/cl_promise_tv_set"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintLeft_toLeftOf="parent">-->
-<!--                <TextView-->
-<!--                    android:id="@+id/tv_promise_date"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="오늘의 약속"-->
-<!--                    android:textSize="20sp"-->
-<!--                    android:fontFamily="@font/pretendard_bold"-->
-<!--                    android:textColor="@color/texthigh"-->
-<!--                    app:layout_constraintTop_toTopOf="parent"-->
-<!--                    app:layout_constraintLeft_toLeftOf="parent"/>-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/tv_promise_count"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    app:layout_constraintTop_toTopOf="parent"-->
-<!--                    app:layout_constraintLeft_toRightOf="@id/tv_promise_date"-->
-<!--                    android:text="0"-->
-<!--                    android:background="@drawable/circle_planscount"-->
-<!--                    android:textSize="16sp"-->
-<!--                    android:fontFamily="@font/pretendard_bold"-->
-<!--                    android:textColor="@color/purpleMain"-->
-<!--                    android:gravity="center"-->
-<!--                    android:layout_marginLeft="6dp"-->
-<!--                    android:layout_marginTop="3dp"/>-->
-
-<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-
-<!--            <androidx.recyclerview.widget.RecyclerView-->
-<!--                android:id="@+id/rv_todolist"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layout_constraintTop_toBottomOf="@id/cl_promise_tv_set"-->
-<!--                app:layout_constraintLeft_toLeftOf="parent"-->
-<!--                app:layout_constraintRight_toRightOf="parent"/>-->
-<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--            android:id="@+id/cl_promise_all"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/cl_promise_date"-->
-<!--            android:layout_marginHorizontal="15dp"-->
-<!--            android:layout_marginTop="50dp">-->
-<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                android:id="@+id/cl_promiseall_tv_set"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintLeft_toLeftOf="parent">-->
-<!--                <TextView-->
-<!--                    android:id="@+id/tv_promiseall_date"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="대기 중인 약속"-->
-<!--                    android:textSize="20sp"-->
-<!--                    android:fontFamily="@font/pretendard_bold"-->
-<!--                    android:textColor="@color/texthigh"-->
-<!--                    app:layout_constraintTop_toTopOf="parent"-->
-<!--                    app:layout_constraintLeft_toLeftOf="parent"/>-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/tv_promiseall_count"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    app:layout_constraintTop_toTopOf="parent"-->
-<!--                    app:layout_constraintLeft_toRightOf="@id/tv_promiseall_date"-->
-<!--                    android:text="0"-->
-<!--                    android:background="@drawable/circle_planscount"-->
-<!--                    android:textSize="16sp"-->
-<!--                    android:fontFamily="@font/pretendard_bold"-->
-<!--                    android:textColor="@color/purpleMain"-->
-<!--                    android:gravity="center"-->
-<!--                    android:layout_marginLeft="6dp"-->
-<!--                    android:layout_marginTop="3dp"/>-->
-
-<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-
-<!--            <androidx.recyclerview.widget.RecyclerView-->
-<!--                android:id="@+id/rv_alltodolist"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:layout_constraintTop_toBottomOf="@id/cl_promiseall_tv_set"-->
-<!--                app:layout_constraintLeft_toLeftOf="parent"-->
-<!--                app:layout_constraintRight_toRightOf="parent"/>-->
-<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
