--- a/app/src/main/res/layout/fragment_oncall.xml
+++ b/app/src/main/res/layout/fragment_oncall.xml
@@ -8,6 +8,7 @@
         android:id="@+id/rv_alltodolist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toTopOf="parent" />
 
