--- a/app/src/main/res/layout/item_todolistall.xml
+++ b/app/src/main/res/layout/item_todolistall.xml
@@ -4,7 +4,8 @@
     android:id="@+id/cl_oncalllist"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
+    android:layout_marginHorizontal="24dp"
+    android:layout_marginVertical="5dp"
     android:background="@drawable/layout_todolist"
     android:elevation="8dp"
     android:orientation="horizontal"
@@ -69,7 +70,6 @@
             android:breakStrategy="simple"
             android:ellipsize="end"
             android:fontFamily="@font/pretendard_medium"
-            android:gravity="center_vertical"
             android:maxWidth="183dp"
             android:maxLines="1"
             android:text="ios 스터디"
@@ -83,7 +83,6 @@
             android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:fontFamily="@font/pretendard_medium"
-            android:gravity="center_vertical"
             android:maxLines="1"
             android:text="ios 스터디"
             android:textColor="@color/textMedium"
